# Group_equivariant_deepLearning

./: .gitignore  Lollefil.ipynb  ProjektØnsker.xlsx  README.md  baysian_optimization.py  convolution.ipynb  data_work.ipynb  figure_dataset.py  invariance_equivariance.ipynb  main.py  pyproject.toml  qm9data.py  rst_to_ipynb.py  show_box.py
bekkers_tutorials/: convolution.ipynb  tutorial01.ipynb
project_files/: Samarbejdskontrakt_udkast.doc
results/: Best hyperparameters.txt  l0_n10000.csv  l1_n10000.csv  test.csv
src/: E3Model.py  Evaluation.py  Preprocessing.py
