[project]
name = "group-equivariant-deeplearning"
version = "0.1.0"
description = "Project for group equivariant deep learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.28.0",
    "e3nn>=0.6.0",
    "matplotlib>=3.10.8",
    "nbformat>=4.2.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "plotly>=6.7.0",
    "pyglet>=1.4,<2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "torch==2.7.0; sys_platform == 'darwin'",
    "torch; sys_platform == 'linux'",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.7.0",
    "torch-scatter>=2.1.2",
    "trimesh>=4.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torch-scatter = [
    { index = "pyg-cu126", marker = "sys_platform == 'linux'" },
    { index = "pyg-cpu", marker = "sys_platform == 'darwin'" },
]
torch-cluster = [
    { index = "pyg-cu126", marker = "sys_platform == 'linux'" },
    { index = "pyg-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pyg-cu126"
url = "https://data.pyg.org/whl/torch-2.11.0+cu126.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "pyg-cpu"
url = "https://data.pyg.org/whl/torch-2.7.0+cpu.html"
format = "flat"
explicit = true

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
